<resources>
    <string name="app_name">Egypt TrainLine</string>

    <!--MainActivity screen stat-->
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="toggle_stations_description">toggle stations</string>
    <string name="go">Go</string>
    <string name="station_from_hint">Departure station</string>
    <string name="station_to_hint">Arrival station</string>

    <string name="choose_station_msg">Please choose station</string>
    <!--MainActivity screen end-->


</resources>
